<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout

        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/pop_up_shape"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/loginQuizzy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/quizzy"
            android:textColor="#000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:paddingBottom="12dp"
            android:textSize="14sp"
            android:textColor="#fff"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="12dp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:textColor="#fff"
            android:inputType="textWebPassword"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:background="@drawable/create_acc_button"
            android:text="@string/login"
            android:textScaleX="1.3"
            android:textSize="7.5sp" />
    </LinearLayout>


</RelativeLayout>