<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_pg_bg"
    tools:context=".registerPg">

    <TextView
        android:id="@+id/regPgQuizzy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:text="@string/quizzy"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/regDetailLayout"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bottomLayout"
        android:layout_marginBottom="85dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/quizzerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quizzer_s_name"
            android:inputType="textPersonName"
            android:paddingBottom="12dp"
            android:textColorHint="#fff"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:paddingBottom="12dp"
            android:textColorHint="#fff"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:paddingBottom="12dp"
            android:textColorHint="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/createAcc"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:background="@drawable/create_acc_button"
            android:hint="@string/create_my_account"
            android:textColorHint="#fff"
            android:textScaleX="1.3"
            android:textSize="7.5sp" />

        <TextView
            android:id="@+id/orLoginWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/or_login_with"
            android:textColor="#fff"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/otherLoginLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/twitter"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/twitter" />

            <Button
                android:id="@+id/facebook"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/fb" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/gmail"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:background="@drawable/gmail" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/direct2quiz"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:textStyle="italic"
            android:layout_marginBottom="9dp"
            android:textColor="#fff"
            android:background="@drawable/transparent"
            android:text="@string/take_me_straight_to_the_quiz"
            android:textSize="9sp" />

        <Button
            android:id="@+id/gotoLoginPg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#1e1e1e"
            android:text="@string/i_already_have_an_account"
            android:textSize="9sp"
            android:textStyle="bold"
            android:textScaleX="1.5"
            android:gravity="center"
            android:background="#fff" />

    </LinearLayout>


</RelativeLayout>