<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmation_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout

        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/pop_up_shape"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/confirmation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/are_you_sure_you_want_to_log_out"
            android:textColor="#000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/yes_no"
                android:text="@string/yes"
                android:textScaleX="1.3"
                android:textSize="7.5sp" />

            <Button
                android:id="@+id/no"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/yes_no"
                android:text="@string/no"
                android:textScaleX="1.3"
                android:textSize="7.5sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>